--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 body{
   background-image: url("img/ai-speaks.jpg");
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   font-family: 'Orbitron', sans-serif;
   font-weight: 400;
+  height:100vh;
 }
 
-.container{
-  margin: 0;
-  height: 100vh;
-  background-color: transparent;
+.page-container{
+  margin-top: 70px;
+  margin-bottom: 70px;
 }
 
 /* NAV */
@@ -49,12 +51,12 @@ nav{
 
 /*FOOTER*/
 
-.foot{
+.page-footer{
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 10vh;
+  height: 6vh;
   background-color:rgba(0, 0, 0, 0.4);
  }
 
@@ -65,8 +67,8 @@ nav{
 }
 
 .seal-bottom > img{
-    width:45%;
-    height:45%;
+    width:40%;
+    height:40%;
 }
 
 /*INFO CARDS*/
@@ -123,20 +125,27 @@ nav{
 }
 
 .material-tooltip {
-  background-color:rgba(0, 0, 0, 0.3);
+  background-color:rgba(11, 11, 78, 0.8);
+  border: 1px solid orange;
+  font-size: 12px;
+  text-transform: uppercase;
   margin-top:55px;
   margin-left: -68px;
-  border-radius: 8px;
+  border-radius: 3px;
 }
 
 
 /*NEWS CARD*/
-.news-card-action{
-  display: inline;
+
+.news-container {
+  margin: 0 auto;
+  max-width: 1280px;
 }
 
 .news-card{
   border-radius: 8px;
+  overflow:hidden;
+  background-color: rgb(248, 244, 244);
  /* height: 60vh;*/
 }
 
@@ -148,19 +157,20 @@ nav{
   font-family: 'Orbitron', sans-serif;
   display:flex;
   justify-content: space-between;
+  color: rgb(7, 7, 102)!important;
 }
 
 .news-card-title{
   padding-top: 10px;
   text-transform: capitalize;
 }
-/*.news-card-text{
-  text-align: justify;
-}*/
+
 .news-card-action{
   padding: 0 16px 8px 16px;
   display: flex;
   justify-content: space-between;
+  background-color: white!important;
+  color:  rgb(7, 7, 102)!important;
 }
 
 .news-btn{
@@ -178,18 +188,23 @@ nav{
   border-bottom: 10px solid  #1550c7;
 }
 
-.news-container {
-  margin: 0 auto;
-  max-width: 1280px;
-  width: 90%;
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
-@media only screen and (min-width: 601px) {
-  .news-container {
-    width: 85%;
-  }
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
 }
-@media only screen and (min-width: 993px) {
-  .news-container {
-    width: 70%;
-  }
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
