--- a/src/App.css
+++ b/src/App.css
@@ -1,99 +1,99 @@
-body{
-  background-image: url("img/ai-speaks.jpg");
+body {
+  background-image: url('img/ai-speaks.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   font-family: 'Orbitron', sans-serif;
   font-weight: 400;
-  height:100vh;
+  height: 100vh;
 }
 
-.page-container{
+.page-container {
   margin-top: 70px;
   margin-bottom: 70px;
 }
 
 /* NAV */
-.alan-logo{
-  width: 70px;
-  height: 70px;
+.alan-logo {
+  width: 60px;
+  height: 60px;
   margin-left: 100px;
   margin-top: 10px;
 }
 
-nav{
-  background-color:rgba(0, 0, 0, 0.2);
+nav {
+  background-color: rgba(0, 0, 0, 0.2);
   height: 10vh;
   margin: auto;
   padding-left: 20px;
 }
 
-.nav-title{
-  font-weight:900;
-  margin-left:100px;
+.nav-title {
+  font-weight: 900;
+  margin-left: 100px;
   color: rgb(255, 255, 255);
 }
-.nav-title >span{
-  color: rgb(189, 181, 209)
+.nav-title > span {
+  color: rgb(189, 181, 209);
 }
 
-.brand-logo > img{
-  width:25%;
+.brand-logo > img {
+  width: 25%;
   height: 25%;
-  margin-top:45px;
+  margin-top: 45px;
 }
 
-.right{
+.right {
   margin-right: 100px;
-  margin-top:40px;
+  margin-top: 40px;
 }
 
 /*FOOTER*/
 
-.page-footer{
+.page-footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 6vh;
-  background-color:rgba(0, 0, 0, 0.4);
- }
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
-.seal-bottom{
+.seal-bottom {
   position: absolute;
   bottom: 10px;
   left: 4%;
 }
 
-.seal-bottom > img{
-    width:40%;
-    height:40%;
+.seal-bottom > img {
+  width: 25%;
+  height: 25%;
 }
 
 /*INFO CARDS*/
-.info-row{
-  width:50%;
+.info-row {
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
   margin-left: 100px;
   margin-top: 100px;
 }
 
-.info-card-col{
-  width:  100%;
+.info-card-col {
+  width: 100%;
 }
 
-.info-card{
+.info-card {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 8px;
 }
 
-.info-card-title{
-  color:#1550c7;
+.info-card-title {
+  color: #1550c7;
 }
 
-.info-card-info{
+.info-card-info {
   color: white;
   text-transform: uppercase;
   padding-top: 5px;
@@ -102,38 +102,41 @@ nav{
   justify-items: center;
 }
 
-.bar{
+.bar {
   color: rgb(162, 144, 206);
   padding: 0px 6px;
 }
 
-.info-card-text{
-  color: rgb(189, 181, 209)!important;
+.info-card-text {
+  color: rgb(189, 181, 209) !important;
   padding-left: 8px;
 }
 
-.info-card-text-highlight{
-  color:#1550c7!important;
+.info-card-text-highlight {
+  color: #1550c7 !important;
   font-weight: bold;
   padding-left: 8px;
   animation: fadein 2s;
 }
 
 @keyframes fadein {
-  from { opacity: 0;}
-  to   { opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .material-tooltip {
-  background-color:rgba(11, 11, 78, 0.8);
+  background-color: rgba(11, 11, 78, 0.8);
   border: 1px solid orange;
   font-size: 12px;
   text-transform: uppercase;
-  margin-top:55px;
+  margin-top: 55px;
   margin-left: -68px;
   border-radius: 3px;
 }
-
 
 /*NEWS CARD*/
 
@@ -142,52 +145,51 @@ nav{
   max-width: 1280px;
 }
 
-.news-card{
+.news-card {
   border-radius: 8px;
-  overflow:hidden;
+  overflow: hidden;
   background-color: rgb(248, 244, 244);
- /* height: 60vh;*/
+  /* height: 60vh;*/
 }
 
-.news-card-content{
+.news-card-content {
   font-family: 'Roboto';
 }
 
-.news-card-details{
+.news-card-details {
   font-family: 'Orbitron', sans-serif;
-  display:flex;
+  display: flex;
   justify-content: space-between;
-  color: rgb(7, 7, 102)!important;
+  color: rgb(7, 7, 102) !important;
 }
 
-.news-card-title{
+.news-card-title {
   padding-top: 10px;
   text-transform: capitalize;
 }
 
-.news-card-action{
+.news-card-action {
   padding: 0 16px 8px 16px;
   display: flex;
   justify-content: space-between;
-  background-color: white!important;
-  color:  rgb(7, 7, 102)!important;
+  background-color: white !important;
+  color: rgb(7, 7, 102) !important;
 }
 
-.news-btn{
+.news-btn {
   background-color: #1550c7;
 }
-.news-btn:hover{
+.news-btn:hover {
   background-color: #1a4492;
 }
 
-.news-card-img{
+.news-card-img {
   height: 250px;
 }
 
-.active-card{
-  border-bottom: 10px solid  #1550c7;
+.active-card {
+  border-bottom: 10px solid #1550c7;
 }
-
 
 /* width */
 ::-webkit-scrollbar {
@@ -196,15 +198,15 @@ nav{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
