--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@ body {
 
 nav {
   background-color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
   height: 10vh;
   margin: auto;
   padding-left: 20px;
@@ -34,6 +36,7 @@ nav {
   margin-left: 100px;
   color: rgb(255, 255, 255);
 }
+
 .nav-title > span {
   color: rgb(189, 181, 209);
 }
