--- a/src/App.css
+++ b/src/App.css
@@ -80,16 +80,17 @@ nav {
   display: flex;
   flex-wrap: wrap;
   margin-left: 100px;
-  margin-top: 100px;
+  margin-top: 40px;
 }
 
-.info-card-col {
-  width: 100%;
+.info-card-container {
+  width: 90%;
 }
 
 .info-card {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 8px;
+  font-size: 12px;
 }
 
 .info-card-title {
@@ -103,6 +104,10 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-items: center;
+}
+
+.info-card-action {
+  font-size: 10px;
 }
 
 .bar {
