--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 
 .page-container {
   margin-top: 70px;
-  margin-bottom: 70px;
+  padding-bottom: 70px !important;
 }
 
 /* NAV */
@@ -27,7 +27,6 @@ nav {
   display: flex;
   align-items: center;
   height: 10vh;
-  margin: auto;
   padding-left: 20px;
 }
 
@@ -59,7 +58,7 @@ nav {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 6vh;
+  height: 7vh;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -90,7 +89,7 @@ nav {
 .info-card {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .info-card-title {
@@ -107,7 +106,7 @@ nav {
 }
 
 .info-card-action {
-  font-size: 10px;
+  font-size: 11px;
 }
 
 .bar {
@@ -137,23 +136,27 @@ nav {
 }
 
 .material-tooltip {
-  background-color: rgba(11, 11, 78, 0.8);
-  border: 1px solid orange;
-  font-size: 12px;
+  background-color: orange;
+  color: #ffff;
+  font-size: 10px;
+  font-weight: 600;
   text-transform: uppercase;
-  margin-top: 55px;
-  margin-left: -68px;
+  margin: 44px 0 0 -47px;
   border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*NEWS CARD*/
 
-.news-container {
+.container {
   margin: 0 auto;
   max-width: 1280px;
 }
 
 .news-card {
+  font-size: 11px;
   border-radius: 8px;
   overflow: hidden;
   background-color: rgb(248, 244, 244);
@@ -162,6 +165,18 @@ nav {
 
 .news-card-content {
   font-family: 'Roboto';
+}
+
+.card-img {
+  width: 100%;
+  height: 30% !important;
+  min-height: 30% !important;
+  max-height: 30% !important;
+}
+
+.card-img img {
+  width: 100%;
+  object-fit: cover !important;
 }
 
 .news-card-details {
@@ -174,6 +189,8 @@ nav {
 .news-card-title {
   padding-top: 10px;
   text-transform: capitalize;
+  font-weight: 600 !important;
+  font-size: 16px !important;
 }
 
 .news-card-action {
@@ -187,12 +204,9 @@ nav {
 .news-btn {
   background-color: #1550c7;
 }
+
 .news-btn:hover {
   background-color: #1a4492;
-}
-
-.news-card-img {
-  height: 250px;
 }
 
 .active-card {
