--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ nav {
 }
 
 .material-tooltip {
-  background-color: orange;
+  background-color: #ffa500;
   color: #ffff;
   font-size: 10px;
   font-weight: 600;
